add client class

--- a/sCore/sCore.vcxproj
+++ b/sCore/sCore.vcxproj
@@ -76,12 +76,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Client.cpp" />
     <ClCompile Include="functions.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Socks.cpp" />
     <ClCompile Include="Thread.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Client.h" />
     <ClInclude Include="functions.h" />
     <ClInclude Include="Socks.h" />
     <ClInclude Include="std.h" />
